--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
 export GOOSE_DBSTRING="postgres://postgres:boot.dev@localhost:5432/gator?sslmode=disable"
 export GOOSE_DRIVER="postgres"
+export GOOSE_MIGRATION_DIR="./sql/schema"
